Fix inconsistent spacing in buttons (#3467)
* Fix alignment of Configure Server panel headings

* Fix inconsistent spacing in buttons

--- a/web/css/src/themes/default.css
+++ b/web/css/src/themes/default.css
@@ -1844,7 +1844,9 @@
 
 .button {
 	cursor: pointer;
-	display: inline-block;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	line-height: 21px;
 	font-size: 0.85rem;
 	font-weight: 500;
@@ -2100,6 +2102,10 @@
 		position: absolute;
 		top: 0;
 		right: 15px;
+	}
+
+	& .fas {
+		min-width: 20px;
 	}
 }
 
