--- a/web/css/src/utilities.css
+++ b/web/css/src/utilities.css
@@ -77,10 +77,6 @@
 	margin-right: 10px !important;
 }
 
-.u-mr15 {
-	margin-right: 15px !important;
-}
-
 .u-mb5 {
 	margin-bottom: 5px !important;
 }
